# use_module

./: CMakeLists.txt  client2.cc  client3.cc  main.cc  math_submodule1.cc  math_submodule2.cc  mathx.cc  mathxpartition1.cc  mathxpartition2.cc  module_partition.cc  my_math.cxx
